--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3",
     "os": "^0.1.2",
+    "pdfkit": "^0.16.0",
     "socket.io": "^4.7.4",
     "uuid": "^11.0.3"
   },
